test/fail_compilation/fail270.d
struct Tuple( TList... ){
        mixin .Tuple!((TList[1 .. $])) tail;
}
mixin Tuple!(int);
